--- a/index.html
+++ b/index.html
@@ -1,41 +1,89 @@
-
 <!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasieka MrPasieka</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #fffaf0;
+        * {
             margin: 0;
             padding: 0;
-            color: #333;
+            box-sizing: border-box;
         }
+
+        body {
+            font-family: 'Raleway', sans-serif;
+            background: linear-gradient(135deg, #fff7e6, #fffaf0);
+            color: #333;
+            line-height: 1.6;
+        }
+
         header {
-            background-color: #f4c542;
-            padding: 1em;
+            background-color: #f4a261;
+            padding: 2rem 1rem;
             text-align: center;
             color: white;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
+
+        header h1 {
+            font-size: 2.5rem;
+        }
+
         main {
-            padding: 2em;
-            max-width: 800px;
+            padding: 2rem;
+            max-width: 1000px;
             margin: auto;
         }
+
         .jar {
             text-align: center;
+            margin-bottom: 2rem;
         }
+
         .jar img {
-            max-width: 200px;
+            max-width: 250px;
+            transition: transform 0.3s ease;
         }
-        footer {
+
+        .jar img:hover {
+            transform: scale(1.1);
+        }
+
+        h2 {
+            color: #d68c00;
             text-align: center;
-            padding: 1em;
-            background-color: #f4c542;
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+
+        p {
+            font-size: 1.1rem;
+            margin-bottom: 1rem;
+            text-align: center;
+        }
+
+        footer {
+            background-color: #f4a261;
             color: white;
-            margin-top: 2em;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
+
+        @media (max-width: 600px) {
+            header h1 {
+                font-size: 2rem;
+            }
+
+            h2 {
+                font-size: 1.5rem;
+            }
+
+            .jar img {
+                max-width: 180px;
+            }
         }
     </style>
 </head>
@@ -48,7 +96,7 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Honey_jar.svg/240px-Honey_jar.svg.png" alt="Słoik miodu">
         </div>
         <h2>Miód Wielokwiatowy</h2>
-        <p>Naturalny miód z naszej rodzinnej pasieki. Zbierany w czystym regionie, bez dodatków i filtrów.</p>
+        <p>Naturalny miód z naszej rodzinnej pasieki.<br>Zbierany w czystym regionie, bez dodatków i filtrów.<br>100% natura prosto do Twojego słoika.</p>
         <p><strong>Kontakt:</strong><br>
         Tel: 123 456 789<br>
         Email: kontakt@mrpasieka.pl</p>
