--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pasieka Msieka</title>
+    <title>Pasieka MrPasieka</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -12,11 +12,17 @@
             box-sizing: border-box;
         }
 
+        html, body {
+            height: 100%;
+            width: 100%;
+        }
+
         body {
             font-family: 'Raleway', sans-serif;
             background: linear-gradient(135deg, #fff7e6, #fffaf0);
             color: #333;
-            line-height: 1.6;
+            display: flex;
+            flex-direction: column;
         }
 
         header {
@@ -32,7 +38,9 @@
         }
 
         main {
+            flex: 1;
             padding: 2rem;
+            width: 100%;
             max-width: 1000px;
             margin: auto;
         }
@@ -69,7 +77,6 @@
             color: white;
             text-align: center;
             padding: 1rem;
-            margin-top: 2rem;
         }
 
         @media (max-width: 600px) {
