--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container nav-container">
             <h1>Pasieka MrPasieka</h1>
-            <nav>
+            <nav class="navbar">
                 <ul class="nav-list">
                     <li><a href="#about">O nas</a></li>
                     <li><a href="#products">Produkty</a></li>
@@ -80,14 +80,22 @@
                 <textarea placeholder="Wiadomość" required></textarea>
                 <button type="submit">Wyślij</button>
             </form>
-            <p><strong>Telefon:</strong> 123 456 789<br><strong>Email:</strong> kontakt@mrpasieka.pl</p>
+            <div class="contact-details">
+                <p><strong>Telefon:</strong> 123 456 789</p>
+                <p><strong>Email:</strong> kontakt@mrpasieka.pl</p>
+            </div>
         </div>
     </section>
 
     <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Pasieka MrPasieka. Wszelkie prawa zastrzeżone.</p>
-            <button id="backToTop">Powrót do góry</button>
+        <div class="footer-container">
+            <p>&copy; 2025 Pasieka MrPasieka</p>
+            <ul class="footer-links">
+                <li><a href="#about">O nas</a></li>
+                <li><a href="#products">Produkty</a></li>
+                <li><a href="#contact">Kontakt</a></li>
+            </ul>
+            <button id="backToTop">↑ Do góry</button>
         </div>
     </footer>
 
