--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pasieka MrPasieka</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <title>MrPasieka</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
         <div class="container nav-container">
-            <h1>Pasieka MrPasieka</h1>
+            <h1 class="logo">MrPasieka</h1>
             <nav class="navbar">
                 <ul class="nav-list">
                     <li><a href="#about">O nas</a></li>
@@ -21,6 +21,7 @@
             </nav>
         </div>
     </header>
+
     <section class="section" id="products">
         <div class="container">
             <h2>Nasze produkty</h2>
@@ -58,7 +59,7 @@
     <section class="section" id="contact">
         <div class="container">
             <h2>Kontakt</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel semper leo.</p>
+            <p>Masz pytania? Napisz do nas, chętnie odpowiemy.</p>
             <form class="contact-form">
                 <input type="text" placeholder="Imię" required>
                 <input type="email" placeholder="Email" required>
@@ -74,7 +75,7 @@
 
     <footer class="footer">
         <div class="footer-container">
-            <p>&copy; 2025 Pasieka MrPasieka</p>
+            <p>&copy; 2025 MrPasieka</p>
             <ul class="footer-links">
                 <li><a href="#about">O nas</a></li>
                 <li><a href="#products">Produkty</a></li>
