--- a/index.html
+++ b/index.html
@@ -22,24 +22,31 @@
         </div>
     </header>
 
+    <section class="section" id="about">
+        <div class="container">
+            <h2>O nas</h2>
+            <p>MrPasieka to rodzinna pasieka prowadzona z pasją od pokoleń. Zajmujemy się hodowlą pszczół i produkcją naturalnych miodów oraz produktów pszczelich. Dbamy o najwyższą jakość i zdrowie naszych pszczół, a każdy słoik miodu to efekt naszej troski i doświadczenia.</p>
+        </div>
+    </section>
+
     <section class="section" id="products">
         <div class="container">
             <h2>Nasze produkty</h2>
             <div class="products">
                 <div class="product">
-                    <img src="images/miod1.jpg" alt="Miód 1">
+                    <img src="images/miod1.jpg" alt="Miód Wielokwiatowy">
                     <h3>Miód Wielokwiatowy</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Miód o łagodnym smaku, pozyskiwany z nektaru wielu kwiatów. Idealny do herbaty, wypieków i na kanapki. Wspiera odporność i dodaje energii.</p>
                 </div>
                 <div class="product">
-                    <img src="images/miod2.jpg" alt="Miód 2">
+                    <img src="images/miod2.jpg" alt="Miód Lipowy">
                     <h3>Miód Lipowy</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Charakteryzuje się intensywnym aromatem lipy. Polecany przy przeziębieniach i problemach z gardłem. Naturalny antybiotyk prosto z ula.</p>
                 </div>
                 <div class="product">
-                    <img src="images/miod3.jpg" alt="Miód 3">
+                    <img src="images/miod3.jpg" alt="Miód Akacjowy">
                     <h3>Miód Akacjowy</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Bardzo jasny, delikatny w smaku. Polecany dla dzieci i osób ceniących łagodny miód. Długo pozostaje płynny.</p>
                 </div>
             </div>
         </div>
@@ -49,9 +56,9 @@
         <div class="container">
             <h2>Galeria</h2>
             <div class="gallery">
-                <img src="images/galeria1.jpg" alt="Galeria 1">
-                <img src="images/galeria2.jpg" alt="Galeria 2">
-                <img src="images/galeria3.jpg" alt="Galeria 3">
+                <img src="images/galeria1.jpg" alt="Pasieka wśród kwiatów">
+                <img src="images/galeria2.jpg" alt="Pszczoły przy pracy">
+                <img src="images/galeria3.jpg" alt="Słoiki z miodem">
             </div>
         </div>
     </section>
@@ -59,7 +66,7 @@
     <section class="section" id="contact">
         <div class="container">
             <h2>Kontakt</h2>
-            <p>Masz pytania? Napisz do nas, chętnie odpowiemy.</p>
+            <p>Masz pytania dotyczące naszych produktów lub chcesz zamówić miód? Skontaktuj się z nami!</p>
             <form class="contact-form">
                 <input type="text" placeholder="Imię" required>
                 <input type="email" placeholder="Email" required>
