--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header glass">
         <div class="container nav-container">
             <h1 class="logo">MrPasieka</h1>
             <nav class="navbar">
@@ -22,76 +22,87 @@
         </div>
     </header>
 
-    <section class="section" id="about">
-        <div class="container">
-            <h2>O nas</h2>
-            <p>MrPasieka to rodzinna pasieka prowadzona z pasją od pokoleń. Zajmujemy się hodowlą pszczół i produkcją naturalnych miodów oraz produktów pszczelich. Dbamy o najwyższą jakość i zdrowie naszych pszczół, a każdy słoik miodu to efekt naszej troski i doświadczenia.</p>
-        </div>
-    </section>
+    <main>
+        <section class="hero glass">
+            <div class="container hero-content">
+                <h2>Naturalny miód z przyszłości</h2>
+                <p>Pasieka rodzinna, tradycja i technologia. Najwyższa jakość prosto z ula do Twojego domu.</p>
+                <a href="#products" class="cta-btn">Zobacz ofertę</a>
+            </div>
+        </section>
 
-    <section class="section" id="products">
-        <div class="container">
-            <h2>Nasze produkty</h2>
-            <div class="products">
-                <div class="product">
-                    <img src="images/miod1.jpg" alt="Miód Wielokwiatowy">
-                    <h3>Miód Wielokwiatowy</h3>
-                    <p>Miód o łagodnym smaku, pozyskiwany z nektaru wielu kwiatów. Idealny do herbaty, wypieków i na kanapki. Wspiera odporność i dodaje energii.</p>
-                </div>
-                <div class="product">
-                    <img src="images/miod2.jpg" alt="Miód Lipowy">
-                    <h3>Miód Lipowy</h3>
-                    <p>Charakteryzuje się intensywnym aromatem lipy. Polecany przy przeziębieniach i problemach z gardłem. Naturalny antybiotyk prosto z ula.</p>
-                </div>
-                <div class="product">
-                    <img src="images/miod3.jpg" alt="Miód Akacjowy">
-                    <h3>Miód Akacjowy</h3>
-                    <p>Bardzo jasny, delikatny w smaku. Polecany dla dzieci i osób ceniących łagodny miód. Długo pozostaje płynny.</p>
+        <section class="section glass" id="about">
+            <div class="container">
+                <h2>O nas</h2>
+                <p>
+                    Jesteśmy pasjonatami pszczelarstwa od pokoleń. Łączymy tradycję z nowoczesnością, dbając o dobrostan pszczół i środowiska. Nasze miody to czysta natura, zamknięta w eleganckim słoiku.
+                </p>
+            </div>
+        </section>
+
+        <section class="section glass" id="products">
+            <div class="container">
+                <h2>Nasze produkty</h2>
+                <div class="products">
+                    <div class="product">
+                        <img src="images/miod1.jpg" alt="Miód Wielokwiatowy">
+                        <h3>Miód Wielokwiatowy</h3>
+                        <p>Delikatny, kwiatowy aromat. Idealny do codziennego spożycia i wzmacniania odporności.</p>
+                    </div>
+                    <div class="product">
+                        <img src="images/miod2.jpg" alt="Miód Lipowy">
+                        <h3>Miód Lipowy</h3>
+                        <p>Wyrazisty smak i naturalne wsparcie przy przeziębieniach. Złoto polskich lip.</p>
+                    </div>
+                    <div class="product">
+                        <img src="images/miod3.jpg" alt="Miód Akacjowy">
+                        <h3>Miód Akacjowy</h3>
+                        <p>Jasny, łagodny, długo płynny. Ulubiony przez dzieci i dorosłych.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section class="section" id="gallery">
-        <div class="container">
-            <h2>Galeria</h2>
-            <div class="gallery">
-                <img src="images/galeria1.jpg" alt="Pasieka wśród kwiatów">
-                <img src="images/galeria2.jpg" alt="Pszczoły przy pracy">
-                <img src="images/galeria3.jpg" alt="Słoiki z miodem">
+        <section class="section glass" id="gallery">
+            <div class="container">
+                <h2>Galeria</h2>
+                <div class="gallery">
+                    <img src="images/galeria1.jpg" alt="Pasieka wśród kwiatów">
+                    <img src="images/galeria2.jpg" alt="Pszczoły przy pracy">
+                    <img src="images/galeria3.jpg" alt="Słoiki z miodem">
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section class="section" id="contact">
-        <div class="container">
-            <h2>Kontakt</h2>
-            <p>Masz pytania dotyczące naszych produktów lub chcesz zamówić miód? Skontaktuj się z nami!</p>
-            <form class="contact-form">
-                <input type="text" placeholder="Imię" required>
-                <input type="email" placeholder="Email" required>
-                <textarea placeholder="Wiadomość" required></textarea>
-                <button type="submit">Wyślij</button>
-            </form>
-            <div class="contact-details">
-                <p><strong>Telefon:</strong> 123 456 789</p>
-                <p><strong>Email:</strong> kontakt@mrpasieka.pl</p>
+        <section class="section glass" id="contact">
+            <div class="container">
+                <h2>Kontakt</h2>
+                <p>Masz pytania lub chcesz zamówić miód? Napisz do nas!</p>
+                <form class="contact-form">
+                    <input type="text" placeholder="Imię" required>
+                    <input type="email" placeholder="Email" required>
+                    <textarea placeholder="Wiadomość" required></textarea>
+                    <button type="submit">Wyślij</button>
+                </form>
+                <div class="contact-details">
+                    <p><strong>Telefon:</strong> 123 456 789</p>
+                    <p><strong>Email:</strong> kontakt@mrpasieka.pl</p>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
-    <footer class="footer">
+    <footer class="footer glass">
         <div class="footer-container">
-            <p>&copy; 2025 MrPasieka</p>
+            <p>&copy; 2050 MrPasieka</p>
             <ul class="footer-links">
                 <li><a href="#about">O nas</a></li>
                 <li><a href="#products">Produkty</a></li>
                 <li><a href="#contact">Kontakt</a></li>
             </ul>
-            <button id="backToTop">↑ Do góry</button>
+            <button id="backToTop" title="Do góry">↑</button>
         </div>
     </footer>
-
     <script src="script.js"></script>
 </body>
 </html>
