--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
             <h1 class="logo">MrPasieka</h1>
             <nav class="navbar">
                 <ul class="nav-list">
-                    <li><a href="#about">O nas</a></li>
                     <li><a href="#products">Produkty</a></li>
                     <li><a href="#gallery">Galeria</a></li>
                     <li><a href="#contact">Kontakt</a></li>
@@ -43,17 +42,8 @@
             <img class="hero-bg" src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80" alt="Pasieka" />
             <div class="container hero-content">
                 <h2>Naturalny miód z przyszłości</h2>
-                <p>Pasieka rodzinna, tradycja i technologia. Najwyższa jakość prosto z ula do Twojego domu.</p>
+                <p>Najwyższa jakość prosto z ula do Twojego domu.</p>
                 <a href="#products" class="cta-btn">Zobacz ofertę</a>
-            </div>
-        </section>
-
-        <section class="section glass reveal" id="about">
-            <div class="container">
-                <h2>O nas</h2>
-                <p>
-                    Jesteśmy pasjonatami pszczelarstwa od pokoleń. Łączymy tradycję z nowoczesnością, dbając o dobrostan pszczół i środowiska. Nasze miody to czysta natura, zamknięta w eleganckim słoiku.
-                </p>
             </div>
         </section>
 
@@ -64,17 +54,14 @@
                     <div class="product">
                         <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Miód Wielokwiatowy">
                         <h3>Miód Wielokwiatowy</h3>
-                        <p>Delikatny, kwiatowy aromat. Idealny do codziennego spożycia i wzmacniania odporności.</p>
                     </div>
                     <div class="product">
                         <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=400&q=80" alt="Miód Lipowy">
                         <h3>Miód Lipowy</h3>
-                        <p>Wyrazisty smak i naturalne wsparcie przy przeziębieniach. Złoto polskich lip.</p>
                     </div>
                     <div class="product">
                         <img src="https://images.unsplash.com/photo-1519864600265-abb23847ef2c?auto=format&fit=crop&w=400&q=80" alt="Miód Akacjowy">
                         <h3>Miód Akacjowy</h3>
-                        <p>Jasny, łagodny, długo płynny. Ulubiony przez dzieci i dorosłych.</p>
                     </div>
                 </div>
             </div>
@@ -95,7 +82,7 @@
         <section class="section glass reveal" id="contact">
             <div class="container">
                 <h2>Kontakt</h2>
-                <p>Masz pytania lub chcesz zamówić miód? Napisz do nas!</p>
+                <p>Chcesz zamówić miód? Napisz do nas!</p>
                 <form class="contact-form">
                     <input type="text" placeholder="Imię" required>
                     <input type="email" placeholder="Email" required>
