--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MrPasieka</title>
+    <title>Pasieka</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -25,7 +25,7 @@
 
     <header class="header glass">
         <div class="container nav-container">
-            <h1 class="logo">MrPasieka</h1>
+            <h1 class="logo">Pasieka</h1>
             <nav class="navbar">
                 <ul class="nav-list">
                     <li><a href="#products">Produkty</a></li>
