--- a/index.html
+++ b/index.html
@@ -79,22 +79,28 @@
             </div>
         </section>
 
-        <section class="section glass reveal" id="contact">
-            <div class="container">
-                <h2>Kontakt</h2>
-                <p>Chcesz zamówić miód? Napisz do nas!</p>
-                <form class="contact-form">
-                    <input type="text" placeholder="Imię" required>
-                    <input type="email" placeholder="Email" required>
-                    <textarea placeholder="Wiadomość" required></textarea>
-                    <button type="submit">Wyślij</button>
-                </form>
-                <div class="contact-details">
-                    <p><strong>Telefon:</strong> 123 456 789</p>
-                    <p><strong>Email:</strong> kontakt@mrpasieka.pl</p>
-                </div>
+       <section class="section glass reveal" id="contact">
+    <div class="container">
+        <h2>Kontakt</h2>
+        <p>Chcesz zamówić miód? Napisz do nas!</p>
+        <form class="contact-form">
+            <input type="text" placeholder="Imię" required>
+            <input type="email" placeholder="Email" required>
+            <textarea placeholder="Wiadomość" required></textarea>
+            <button type="submit">Wyślij</button>
+        </form>
+        <div class="contact-details">
+            <div class="contact-row">
+                <span class="contact-icon">📞</span>
+                <a href="tel:123456789">123 456 789</a>
             </div>
-        </section>
+            <div class="contact-row">
+                <span class="contact-icon">✉️</span>
+                <a href="mailto:kontakt@mrpasieka.pl">kontakt@mrpasieka.pl</a>
+            </div>
+        </div>
+    </div>
+</section>
     </main>
 
     <footer class="footer glass reveal">
