--- a/index.html
+++ b/index.html
@@ -79,36 +79,38 @@
             </div>
         </section>
 
-       <section class="section glass reveal" id="contact">
-    <div class="container">
-        <h2>Kontakt</h2>
-        <p>Chcesz zamówić miód? Napisz do nas!</p>
-        <form class="contact-form">
-            <input type="text" placeholder="Imię" required>
-            <input type="email" placeholder="Email" required>
-            <textarea placeholder="Wiadomość" required></textarea>
-            <button type="submit">Wyślij</button>
-        </form>
-        <div class="contact-details">
-            <div class="contact-row">
-                <span class="contact-icon">📞</span>
-                <a href="tel:123456789">123 456 789</a>
+        <section class="section glass reveal" id="contact">
+            <div class="container">
+                <h2>Kontakt</h2>
+                <p>Chcesz zamówić miód? Napisz do nas!</p>
+                <div class="contact-flex">
+                    <form class="contact-form">
+                        <input type="text" placeholder="Imię" required>
+                        <input type="email" placeholder="Email" required>
+                        <textarea placeholder="Wiadomość" required></textarea>
+                        <button type="submit">Wyślij</button>
+                    </form>
+                    <div class="contact-details">
+                        <div class="contact-row">
+                            <span class="contact-icon">📞</span>
+                            <a href="tel:123456789">123 456 789</a>
+                        </div>
+                        <div class="contact-row">
+                            <span class="contact-icon">✉️</span>
+                            <a href="mailto:kontakt@mrpasieka.pl">kontakt@mrpasieka.pl</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="contact-row">
-                <span class="contact-icon">✉️</span>
-                <a href="mailto:kontakt@mrpasieka.pl">kontakt@mrpasieka.pl</a>
-            </div>
-        </div>
-    </div>
-</section>
+        </section>
     </main>
 
     <footer class="footer glass reveal">
         <div class="footer-container">
             <p>&copy; 2050 MrPasieka</p>
             <ul class="footer-links">
-                <li><a href="#about">O nas</a></li>
                 <li><a href="#products">Produkty</a></li>
+                <li><a href="#gallery">Galeria</a></li>
                 <li><a href="#contact">Kontakt</a></li>
             </ul>
             <button id="backToTop" title="Do góry">↑</button>
