--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Miód od Ojca – Pasieka rodzinna | Naturalny miód prosto z ula</title>
+    <title>Pasieka | Naturalny miód prosto z ula</title>
     <meta name="description" content="Rodzinna pasieka – świeży, naturalny miód z polskiej wsi. Miód wielokwiatowy, lipowy, rzepakowy. Zamów telefonicznie lub odbierz na miejscu." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
-    <meta property="og:title" content="Miód od Ojca – Pasieka rodzinna" />
+    <link rel="stylesheet" href="./style.css?v=20251008" />
+    <meta property="og:title" content="Pasieka" />
     <meta property="og:description" content="Naturalny miód prosto z pasieki. Skontaktuj się i zamów świeży miód." />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="pl_PL" />
 </head>
 <body>
     <header class="header">
-        <a href="#home" class="logo" aria-label="Strona główna – Miód od Ojca">
+        <a href="#home" class="logo" aria-label="Strona główna – Miód">
             <span class="logo-mark">🍯</span>
-            <span class="logo-text">Miód od Ojca</span>
+            <span class="logo-text">Miód</span>
         </a>
         <button id="menu-btn" class="menu-btn" aria-label="Otwórz menu" title="Menu">
             <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
