--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
         <a href="#home" class="logo" aria-label="Strona główna – Miód">
             <span class="logo-mark">🍯</span>
-            <span class="logo-text">Miód</span>
+            <span class="logo-text"></span>
         </a>
         <button id="menu-btn" class="menu-btn" aria-label="Otwórz menu" title="Menu">
             <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
@@ -42,9 +42,9 @@
             <div class="hero-inner">
                 <h1>
                     <span class="serif">Naturalny miód</span>
-                    prosto z pasieki
+                  
                 </h1>
-                <p>Świeży, niepodgrzewany, zebrany z dbałością o pszczoły. Smak, który czuć od pierwszej łyżeczki.</p>
+                <p>Świeży, niepodgrzewany, zebrany z dbałością o pszczoły.</p>
                 <div class="hero-actions">
                     <a href="#products" class="btn btn-primary">Zobacz miody</a>
                     <a href="#contact" class="btn btn-ghost">Zamów telefonicznie</a>
@@ -57,7 +57,7 @@
         <section id="products" class="section">
             <div class="section-head">
                 <h2 class="serif">Nasze miody</h2>
-                <p>Sprawdzone smaki w słoikach 450 g i 900 g. Pytaj o dostępność sezonową.</p>
+                <p>Sprawdzone smaki w słoikach 900 g. Pytaj o dostępność sezonową.</p>
             </div>
             <div class="cards">
                 <article class="card">
@@ -65,7 +65,7 @@
                     <div class="card-body">
                         <h3>Miód wielokwiatowy</h3>
                         <p>Łagodny, uniwersalny, idealny do codziennego słodzenia i na odporność.</p>
-                        <div class="pill-row"><span class="pill">450 g</span><span class="pill">900 g</span></div>
+                        <div class="pill-row"><span class="pill">900 g</span></div>
                     </div>
                 </article>
                 <article class="card">
@@ -73,7 +73,7 @@
                     <div class="card-body">
                         <h3>Miód lipowy</h3>
                         <p>Aromatyczny, ceniony przy przeziębieniach. Wyraźny smak lata.</p>
-                        <div class="pill-row"><span class="pill">450 g</span><span class="pill">900 g</span></div>
+                        <div class="pill-row"><span class="pill">900 g</span></div>
                     </div>
                 </article>
                 <article class="card">
@@ -81,7 +81,7 @@
                     <div class="card-body">
                         <h3>Miód rzepakowy</h3>
                         <p>Jasny, szybko krystalizuje. Delikatny, świetny do deserów.</p>
-                        <div class="pill-row"><span class="pill">450 g</span><span class="pill">900 g</span></div>
+                        <div class="pill-row"><span class="pill">900 g</span></div>
                     </div>
                 </article>
             </div>
@@ -116,10 +116,9 @@
             <div class="about">
                 <div class="about-text">
                     <h2 class="serif">O pasiece</h2>
-                    <p>Pasieka rodzinna prowadzona z pasją od lat. Dbamy o zdrowie rodzin pszczelich i różnorodność pożytków. Zbieramy miód w kilku terminach w roku, abyś mógł cieszyć się naturalnym smakiem różnych odmian.</p>
+                    <p>Dbamy o zdrowie rodzin pszczelich i różnorodność pożytków. Zbieramy miód w kilku terminach w roku, abyś mógł cieszyć się naturalnym smakiem różnych odmian.</p>
                     <ul class="checklist">
                         <li>Mała, rzemieślnicza produkcja</li>
-                        <li>Regularne badania jakości</li>
                         <li>Szacunek dla pszczół i natury</li>
                     </ul>
                 </div>
@@ -131,7 +130,6 @@
         <section id="where" class="section alt">
             <div class="section-head">
                 <h2 class="serif">Gdzie kupić</h2>
-                <p>Zapraszamy do sklepiku przy pasiece lub punktów sprzedaży w okolicy.</p>
             </div>
             <div class="where-grid">
                 <div class="map-wrap">
